--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'io.coil-kt:coil-compose:1.3.2'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02"
+    implementation 'com.sqaureup.retrofit2:retrofit2:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
