--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 		android:usesCleartextTraffic="true"
 		android:theme="@style/Theme.MeatIn">
 		<activity
-			android:name=".MainActivity"
+			android:name=".ui.MainActivity"
 			android:exported="true"
 			android:label="@string/app_name"
 			android:theme="@style/Theme.MeatIn.NoActionBar">
