--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.security:security-crypto:1.0.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
