--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,10 @@
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
+		android:usesCleartextTraffic="true"
 		android:theme="@style/Theme.MeatIn">
 		<activity
-			android:name=".MainActivity"
+			android:name=".ui.MainActivity"
 			android:exported="true"
 			android:label="@string/app_name"
 			android:theme="@style/Theme.MeatIn.NoActionBar">
