--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 		android:name=".ui.MeatInApplication"
 		android:allowBackup="true"
 		android:hardwareAccelerated="true"
-		android:icon="@mipmap/ic_launcher"
+		android:icon="@drawable/meatin_app_logo"
 		android:label="@string/app_name"
-		android:roundIcon="@mipmap/ic_launcher_round"
+		android:roundIcon="@drawable/meatin_app_logo"
 		android:supportsRtl="true"
 		android:usesCleartextTraffic="true"
 		android:theme="@style/Theme.MeatIn">
